--- a/style.css
+++ b/style.css
@@ -21,43 +21,74 @@ body {
     border-radius: 8px;
     padding:1px;
     border:2px solid black;
+
+    position: relative
     
 }
 
+.links {
+    float: left;
+    text-align: left;
+    font-size: 125%;
+    border-style: outset;
+    background-color: #D3D3D3;
+    width: 350px;
+    position: absolute;
+    top: 30%;
+    left: 63%
+    
+    
+}
 .description {
 
-    float: left;
-    margin-left: 9.75%;
-    margin-top: -22.5%;
     text-align: center;
     width: 525px;
     font-size: 125%;
     border-style: outset;
-    background-color: #D3D3D3
-}
-
-.links {
-
-    float: right;
-    margin-right: 19%;
-    margin-top: -22%;
-    text-align: left;
-    font-size: 125%;
-    border-style: outset;
     background-color: #D3D3D3;
-    width: 350px
-}
-
-.hobbies {
-
-    float: right;
-    margin-right: 19%;
-    margin-top: -11.5%;
-    text-align: left;
-    font-size: 125%;
-    border-style: outset;
-    background-color: #D3D3D3;
-    width: 350px
+    position: absolute;
+    top: 18%;
+    right: 63%
     
+   
 }
+
+
+@media (max-width: 480px) {
+
+    .links {
+
+        text-align: left;
+        font-size: 125%;
+        border-style: outset;
+        background-color: #D3D3D3;
+        width: 350px;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        margin-top: 25px
+        
+    }
+    .description {
+    
+        text-align: center;
+        width: 525px;
+        font-size: 125%;
+        border-style: outset;
+        background-color: #D3D3D3;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        margin-top: 25px
+    }
+
+
+
+
+
+}
+
+
+
+
 
