--- a/style.css
+++ b/style.css
@@ -1,94 +1,354 @@
-
 body {
 
-    text-align: center;
-    background-color: #DCDCDC;
-}
-
-.header {
-
-    color:black;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 400%
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 
 }
 
-.images {
+/*-------------Header CSS-------------*/
 
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 8px;
-    padding:1px;
-    border:2px solid black;
+#header {
 
-    position: relative
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url("Images/Background2.png");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed
     
 }
 
-.links {
-    float: left;
-    text-align: left;
-    font-size: 125%;
-    border-style: outset;
-    background-color: #D3D3D3;
-    width: 350px;
+.user-box {
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     position: absolute;
-    top: 30%;
-    left: 63%
-    
-    
-}
-.description {
 
-    text-align: center;
-    width: 525px;
-    font-size: 125%;
-    border-style: outset;
-    background-color: #D3D3D3;
+}
+
+.user-box img {
+
+    border-radius: 50%;
+    width: 250px;
+    border: 2px solid #fff
+
+}
+
+.user-box h1 {
+
+    color: #fff;
+    font-weight: bold;
+    margin: 10px
+
+}
+
+.user-box p {
+
+    color: #fff;
+
+}
+
+.scroll-btn {
+
+    bottom: 30px;
     position: absolute;
-    top: 18%;
-    right: 63%
-    
-   
-}
-
-
-@media (max-width: 480px) {
-
-    .links {
-
-        text-align: left;
-        font-size: 125%;
-        border-style: outset;
-        background-color: #D3D3D3;
-        width: 350px;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        margin-top: 25px
-        
-    }
-    .description {
-    
-        text-align: center;
-        width: 525px;
-        font-size: 125%;
-        border-style: outset;
-        background-color: #D3D3D3;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        margin-top: 25px
-    }
-
-
-
-
+    left: 50%;
+    transform: translateX(-50%);
+    border: 2px solid #fff;
+    padding: 10px 10px 20px;
+    border-radius: 30px
 
 }
 
+.scroll-bar span {
 
+    border: 2px solid #fff;
+    font-size: 10px;
+    border-radius: 30px
 
+}
 
+.scroll-bar {
 
+    animation: mover 1s infinite alternate;
+
+}
+
+@keyframes mover {
+    
+    0%{transform: translateY(0);}
+    100%{transform: translateY(10px);}
+
+}
+
+/*---------------------------About---------------------------*/
+
+.about {
+
+    padding-top: 100px;
+    margin-bottom: -130px;
+
+}
+
+.profile-img {
+
+    height: 400px
+}
+
+.nav-bar {
+
+    top: 0;
+    position: sticky;
+    z-index: 2;
+
+}
+
+.navbar {
+
+    background-color: #000;
+
+}
+
+.navbar-brand {
+
+    color: white !important
+
+}
+
+.nav-bar .fa-bars {
+
+   font-size: 35px;
+   color: #fff 
+
+}
+
+.navbar-toggler {
+
+    outline: none !important;
+
+}
+
+.navbar-nav {
+
+    float: right;
+    text-align: right;
+
+}
+
+.nav-link {
+
+    color: #fff !important;
+
+}
+
+.skills-bar p {
+
+    margin-bottom: 6px;
+    font-weight: 600;
+    
+}
+
+.progress {
+
+    border-radius: 16px !important;
+    margin-bottom: 10px;
+
+}
+
+.progress-bar {
+
+    border-radius: 16px;
+    background: #000 !important
+
+}
+
+/*--------------------------Resume-----------------------*/
+
+.resume {
+
+    margin-top: -50px;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    background-color: #f9f9f9;
+    
+}
+
+.resume h3 {
+
+    margin-bottom: 50px;
+    
+}
+
+.timeline {
+
+    list-style-type: none;
+    position: relative;
+
+}
+
+.timeline:before {
+
+    content: '';
+    background: #555;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+    z-index: 1;
+
+}
+
+.timeline li {
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    background: #fff;
+
+}
+
+.timeline li h4 {
+
+    background-color: #000;
+    padding: 5px 0 5px 20px;
+    color: #fff;
+    font-size: 15px;
+
+}
+
+.timeline li h4 span {
+
+    font-weight: bold;
+    color: #ccc;
+
+}
+
+.timeline li:before {
+
+    content: '';
+    background: #fff;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #000;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 1;
+
+}
+
+/*-----------------------------Contact----------------------------------*/
+
+.contact {
+
+    padding-top: 50px;
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url("Images/Background4.jpg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    color: #fff;
+
+}
+
+.contact .row {
+
+    padding: 30px 0;
+    font-size: 22px;
+
+}
+
+.contact .col-md-6 .fa {
+
+    padding: 10px;
+    font-size: 40px;
+
+}
+
+.contact .btn {
+
+    padding: 10px 25px 10px 25px;
+    margin:5px;
+    border-radius: 30px;
+    border: 2px solid #fff;
+    background: transparent;
+
+}
+
+.contact .btn:focus {
+
+    box-shadow: none !important;
+    
+}
+
+.contact .btn:hover {
+
+    border: 2px solid #fff !important;
+    background: #fff !important;
+    color: #000 !important;
+    transition: 0.7s;
+
+}
+
+.contact .btn .fa {
+
+    margin-right: 10px; 
+
+}
+
+.footer {
+
+    background-color: #000;
+    height: 50px;
+    margin-top: 50px;
+    color: #fff;
+    padding-top: 10px;
+
+}
+
+.fa-heart-o {
+
+    color: red;
+
+}
+
+/*----------------------------Social Icons---------------------*/
+
+.social-icons {
+
+    top: 50%;
+    transform: translateY(-50%);
+    position: sticky;
+    z-index: 1;
+    width: 80px;
+
+}
+
+.social-icons ul {
+
+    padding: initial;
+    
+}
+
+.social-icons ul li {
+
+    height: 40px;
+    width: 40px;
+    list-style-type: none;
+    padding-left: 12px;
+    padding-top: 6px;
+    margin-top: 5px;
+    color: #fff;
+    background-color: #000;
+
+}
+
+.social-icons ul li:hover {
+
+    padding-left: 30px;
+    width: 80px;
+    transition: 1s;
+
+}
