--- a/style.css
+++ b/style.css
@@ -88,7 +88,12 @@ body {
 
     padding-top: 100px;
     margin-bottom: -130px;
+    padding-bottom: 50px
 
+}
+
+.about h3 {
+    text-align: center
 }
 
 .profile-img {
@@ -142,7 +147,7 @@ body {
 
 }
 
-.skills-bar p {
+/* .skills-bar p {
 
     margin-bottom: 6px;
     font-weight: 600;
@@ -161,7 +166,7 @@ body {
     border-radius: 16px;
     background: #000 !important
 
-}
+} */
 
 /*--------------------------Resume-----------------------*/
 
@@ -214,7 +219,8 @@ body {
     background-color: #000;
     padding: 5px 0 5px 20px;
     color: #fff;
-    font-size: 15px;
+    font-size: 20px;
+    border-radius: 25px
 
 }
 
@@ -239,6 +245,24 @@ body {
     z-index: 1;
 
 }
+
+/*-----------------------------Projects---------------------------------*/
+
+.projects {
+
+    margin-top: 10px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    /* background-color: #f9f9f9; */
+    
+}
+
+.projects h3 {
+
+    margin-bottom: 50px;
+    
+}
+
 
 /*-----------------------------Contact----------------------------------*/
 
