--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 20px;
-    background: #fff;
+    /* background: #fff; */
 
 }
 
